--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "bluebird": "^2.3.0",
     "body-parser": "^1.9.2",
     "chai": "^1.9.1",
+    "corser": "^2.0.0",
     "express": "^4.10.1",
     "lodash": "^2.4.1",
     "mocha": "^1.21.4",
